@@ -1,3 +1,5 @@
+HEAD
+	+ More robust management of administration user accounts
 4.0.2
 	+ Remove incorrect directory not exists warnings
 	+ Crash reports can be submitted also with global debug disabled
